--- a/index.html
+++ b/index.html
@@ -2399,7 +2399,7 @@
                         >
                           <div style="padding:0px 0px 0px 0px">
                             <a
-                              href="https://alcpdofoundation.org/"
+                              href="#"
                               style="text-decoration:none"
                               target="_blank"
                               ><img
