--- a/index.html
+++ b/index.html
@@ -2399,11 +2399,11 @@
                         >
                           <div style="padding:0px 0px 0px 0px">
                             <a
-                              href="#"
+                              href="https://assumptionists.org.ph/"
                               style="text-decoration:none"
                               target="_blank"
                               ><img
-                                alt="ALC"
+                                alt="AA"
                                 src="https://communication-philippines-aa.github.io/images-newsletters/images/ALC-PDO-landscape.png"
                                 style="outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
                             /></a>
